# app_forbuild

./: ADMIN_SETUP.md  App.tsx  README.md  app.json  database-setup.sql  my-key.keystore  package-lock.json  package.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: MainActivity.cpp  MainApplication.cpp
android/app/src/main/java/com/alphamensaloon/app/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
database/: SETUP_GUIDE.md  add_admin_role.sql  complete_fix_with_data_migration.sql  complete_order_fix.sql  copy_customer_to_user_id.sql  fix_appointment_time.sql  fix_database_schema.sql  fix_order_items_schema.sql  fix_php_appointment_time.sql  fix_price_per_item.sql  fix_rls_policies.sql  quick_rls_fix.sql  simple_fix.sql  step_by_step_fix.sql
ios/: Podfile
ios/AlphaMenSaloon/: Info.plist
ios/AlphaMenSaloon.xcodeproj/: project.pbxproj
src/: types.ts
src/components/: BrandedHeader.tsx  MembershipCard.tsx  ProductSlider.tsx  QuickActionCard.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useAuth.tsx
src/navigation/: AppNavigator.tsx
src/screens/: AdminScreen.tsx  AppointmentsScreen.tsx  AuthScreen.tsx  BookScreen.tsx  CustomerManagementScreen.tsx  DealsHistoryScreen.tsx  DealsManagementScreen.tsx  HomeScreen.tsx  LoadingScreen.tsx  MembershipScreen.tsx  NotificationPreferencesScreen.tsx  OrdersScreen.tsx  ProfileScreen.tsx  ReportsScreen.tsx  ServicesScreen.tsx  ShopScreen.tsx
(+5 files in other folders)
